# Timesheet-tracker

./: .gitignore  .pre-commit-config.yaml  DEVSECOPS_SECURITY_ASSESSMENT.md  DevSecOps_Maturity_Gap_Assessment_v3.xlsx  Dockerfile  Makefile  README.md  docker-compose.yml  new1.txt  new2.txt  newTestFile  password.txt  secret.txt  secret1.txt  secrets.txt  vulnerable.tf
.github/workflows/: checkov.yml  ci.yml  gitleaks.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  health.py  projects.py  timesheets.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_timesheets.py
